k8s/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: blog-forward-auth-mw
  namespace: blog
spec:
  forwardAuth:
    address: http://forward-auth.oauth.svc.cluster.local:4181
    trustForwardHeader: true
    authResponseHeaders:
      - X-Forwarded-User
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: blog
  namespace: blog
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`blog.zerohertz.xyz`)
      kind: Rule
      middlewares:
        - name: blog-forward-auth-mw
      services:
        - name: blog
          port: 4000
  tls:
    certResolver: zerohertz-resolver
